--- a/app/src/main/res/layout/lv_list_row.xml
+++ b/app/src/main/res/layout/lv_list_row.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="TextView"
+        android:text="Caption"
         android:layout_width="113dp"
         android:layout_height="40dp"
         android:id="@+id/Titulo"
@@ -25,16 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/b_lista"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/Titulo"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.01" />
+        tools:layout_editor_absoluteY="16dp"
+        tools:layout_editor_absoluteX="184dp" />
 
     <Button
         android:text="INFO"
@@ -49,8 +41,23 @@
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/b_lista"
         android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:text="League"
+        android:layout_width="67dp"
+        android:layout_height="31dp"
+        android:id="@+id/txt_league"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.38" />
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
 
 
 </android.support.constraint.ConstraintLayout>
