--- a/app/src/main/res/layout/lv_list_row.xml
+++ b/app/src/main/res/layout/lv_list_row.xml
@@ -8,25 +8,36 @@
 
     <TextView
         android:text="Caption"
-        android:layout_width="113dp"
-        android:layout_height="40dp"
+        android:layout_width="166dp"
+        android:layout_height="34dp"
         android:id="@+id/Titulo"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="104dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="104dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.05" />
+
+    <Button
+        android:text="Teams"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/b_lista"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txt_league"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:text="List"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/b_lista"
-        tools:layout_editor_absoluteY="16dp"
-        tools:layout_editor_absoluteX="184dp" />
+        app:layout_constraintHorizontal_bias="0.22"
+        app:layout_constraintVertical_bias="0.100000024" />
 
     <Button
         android:text="INFO"
@@ -37,27 +48,27 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.100000024"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/b_lista"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintLeft_toRightOf="@+id/txt_league"
+        app:layout_constraintHorizontal_bias="0.8" />
 
     <TextView
         android:text="League"
-        android:layout_width="67dp"
+        android:layout_width="68dp"
         android:layout_height="31dp"
         android:id="@+id/txt_league"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/Titulo"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
