--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -104,8 +104,8 @@
         app:layout_constraintTop_toBottomOf="@+id/main_image" />
     -->
     <ListView
-        android:layout_width="336dp"
-        android:layout_height="406dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="16dp"
         tools:layout_constraintLeft_creator="1"
@@ -115,6 +115,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp" />
 
 </android.support.constraint.ConstraintLayout>
