--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -10,10 +10,9 @@
 
         <TextView
             android:text="Caption"
-            android:layout_width="181dp"
-            android:layout_height="47dp"
+            android:layout_width="match_parent"
             android:id="@+id/txt_caption"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -21,7 +20,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.060000002" />
+            app:layout_constraintVertical_bias="0.060000002"
+            android:layout_height="60dp"
+            android:textStyle="normal|bold|italic"
+            android:textColor="@android:color/holo_red_light"
+            android:textAlignment="center" />
 
         <TextView
             android:text="League"
