--- a/app/src/main/res/layout/lv_list_row.xml
+++ b/app/src/main/res/layout/lv_list_row.xml
@@ -5,31 +5,35 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:theme="@style/AppTheme">
 
         <TextView
-            android:text="Caption"
+            android:text=""
             android:layout_width="214dp"
             android:layout_height="21dp"
             android:id="@+id/Titulo"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="55dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="55dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:layout_constraintHorizontal_bias="0.0"
+            android:textStyle="normal|bold|italic"
+            android:textColor="?attr/colorPrimary"
+            android:layout_marginTop="10dp" />
 
 
         <TextView
-            android:text="League"
+            android:text=""
             android:layout_width="78dp"
             android:layout_height="23dp"
             android:id="@+id/txt_league"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="55dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -38,7 +42,9 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/Titulo"
             app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintHorizontal_bias="0.02" />
+            app:layout_constraintHorizontal_bias="0.02"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="normal|italic" />
 
 
     </android.support.constraint.ConstraintLayout>
