--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -10,7 +10,7 @@
 
         <TextView
             android:text="Caption"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:id="@+id/txt_caption"
             android:layout_marginStart="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -21,10 +21,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
             app:layout_constraintVertical_bias="0.060000002"
-            android:layout_height="60dp"
             android:textStyle="normal|bold|italic"
             android:textColor="@android:color/holo_red_light"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:layout_height="20dp" />
 
         <TextView
             android:text="League"
@@ -40,12 +40,13 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.94" />
+            app:layout_constraintHorizontal_bias="0.94"
+            android:visibility="invisible" />
 
         <TextView
             android:text="Year"
             android:layout_width="122dp"
-            android:layout_height="46dp"
+            android:layout_height="26dp"
             android:id="@+id/txt_year"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +54,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
             app:layout_constraintVertical_bias="0.41" />
@@ -61,7 +62,7 @@
         <TextView
             android:text="Number Of Teams"
             android:layout_width="152dp"
-            android:layout_height="49dp"
+            android:layout_height="29dp"
             android:id="@+id/txt_numTeams"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_caption"
@@ -71,13 +72,12 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            app:layout_constraintHorizontal_bias="0.01"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintVertical_bias="0.07" />
 
         <TextView
             android:text="Number Of Games"
             android:layout_width="131dp"
-            android:layout_height="68dp"
             android:id="@+id/txt_numOfGames"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_numTeams"
@@ -88,14 +88,15 @@
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.060000002" />
+            app:layout_constraintVertical_bias="0.060000002"
+            android:layout_height="28dp" />
 
         <TextView
             android:text="Last Update"
             android:layout_width="144dp"
             android:layout_height="49dp"
             android:id="@+id/txt_lastUpdate"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="2dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_numOfGames"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -103,7 +104,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintVertical_bias="0.18" />
     </android.support.constraint.ConstraintLayout>
 
