--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -6,106 +6,112 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="100dp">
 
         <TextView
-            android:text="Caption"
+            android:text="@string/caption"
             android:layout_width="0dp"
             android:id="@+id/txt_caption"
-            android:layout_marginStart="5dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.060000002"
             android:textStyle="normal|bold|italic"
             android:textColor="@android:color/holo_red_light"
             android:textAlignment="center"
-            android:layout_height="20dp" />
-
-        <TextView
-            android:text="League"
-            android:layout_width="113dp"
-            android:layout_height="51dp"
-            android:id="@+id/txt_league"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.25"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.94"
-            android:visibility="invisible" />
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:text="Year"
-            android:layout_width="122dp"
+            android:text="@string/year"
+            android:layout_width="0dp"
             android:layout_height="26dp"
             android:id="@+id/txt_year"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline2"
+            app:layout_constraintRight_toLeftOf="@+id/guideline"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.05"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.41" />
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            android:layout_marginBottom="8dp"
+            android:textStyle="normal|bold|italic" />
 
         <TextView
-            android:text="Number Of Teams"
-            android:layout_width="152dp"
-            android:layout_height="29dp"
+            android:text="@string/number_of_teams"
+            android:layout_width="0dp"
+            android:layout_height="33dp"
             android:id="@+id/txt_numTeams"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_caption"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/guideline"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/txt_year"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintHorizontal_bias="0.05"
-            app:layout_constraintVertical_bias="0.07" />
+            android:textStyle="normal|bold|italic" />
 
         <TextView
-            android:text="Number Of Games"
-            android:layout_width="131dp"
+            android:text="@string/number_of_games"
+            android:layout_width="0dp"
             android:id="@+id/txt_numOfGames"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_numTeams"
+            android:layout_height="28dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline4"
+            app:layout_constraintRight_toLeftOf="@+id/guideline"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.060000002"
-            android:layout_height="28dp" />
+            android:textStyle="normal|bold|italic" />
 
         <TextView
-            android:text="Last Update"
-            android:layout_width="144dp"
-            android:layout_height="49dp"
+            android:text="@string/last_update"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
             android:id="@+id/txt_lastUpdate"
-            android:layout_marginTop="2dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_numOfGames"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.05"
-            app:layout_constraintVertical_bias="0.18" />
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintRight_toLeftOf="@+id/guideline"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline4"
+            android:layout_marginBottom="8dp"
+            android:textStyle="normal|bold|italic" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline"
+            app:layout_constraintGuide_begin="174dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="214dp" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="384dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline2"
+            app:layout_constraintGuide_begin="117dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="117dp"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="384dp"
+            android:layout_height="0dp"
+            android:id="@+id/guideline3"
+            app:layout_constraintGuide_begin="156dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="156dp"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="384dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline4"
+            app:layout_constraintGuide_begin="196dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="196dp"
+            tools:layout_editor_absoluteX="0dp" />
     </android.support.constraint.ConstraintLayout>
 
 </layout>
